Update index page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My Blog
-subtitle: My openSUSE Themed Blog 
+title: Get openSUSE
+subtitle: openSUSE is completely free to download, use and share. 
 ---
 
 <div class="posts-list">
